<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:columnCount="1"
            android:rowCount="10"
            tools:context=".Activities.MainActivity"
            android:id="@+id/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/player1"
                android:id="@+id/textPlayer1"
                android:layout_marginTop="60dp"
                android:layout_centerHorizontal="true"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:id="@+id/player1"
                android:spinnerMode="dropdown"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_below="@id/textPlayer1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/rows"
                android:id="@+id/textRows"
                android:layout_below="@+id/player1"
                android:layout_marginTop="60dp"
                android:layout_centerHorizontal="true"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:digits="1234567890"
                android:ems="5"
                android:id="@+id/rows"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_below="@id/textRows"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/player2"
                android:id="@+id/textPlayer2"
                android:layout_marginTop="60dp"
                android:layout_centerHorizontal="true"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:id="@+id/player2"
                android:spinnerMode="dropdown"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_below="@id/textPlayer2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/cols"
                android:id="@+id/textCols"
                android:layout_below="@+id/player2"
                android:layout_marginTop="60dp"
                android:layout_centerHorizontal="true"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:digits="1234567890"
                android:ems="5"
                android:id="@+id/cols"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_below="@id/textCols"/>
        </RelativeLayout>
    </LinearLayout>
    <Button
        android:layout_row="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:id="@+id/play"
        android:onClick="play"
        android:layout_gravity="center_horizontal"
        android:layout_column="0"/>

    <Button
        android:layout_row="3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_profiles"
        android:id="@+id/createProfile"
        android:onClick="createPlayerProfile"
        android:layout_gravity="center_horizontal"
        android:layout_column="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/last_winner"
        android:text="@string/last_winner"
        android:layout_gravity="center_horizontal"
        android:layout_row="8"
        android:layout_column="0"/>

</GridLayout>
